--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div class="bar"></div>
       </div>
     </nav>
-    <section id="home" class="home"> <h1>Hello</h1><hr class="rounded"></section>
+    <section id="home" class="home"><h1>Wealthy doesnt mean happy</h1>
+      <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YnVzaW5lc3NtYW58ZW58MHx8MHx8&w=1000&q=80" alt=""></section>
     <section id="about" class="about"> <a href="#" class="myButton">About</a> <hr class="rounded"></section>
     <section id="work" class="work">work <hr class="rounded"></section>
     <section id="resume" class="resume">resume <hr class="rounded"></section>
